# Bazel development build for C++ API.
# C/C++ documentation: https://docs.bazel.build/versions/master/be/c-cpp.html

load("//bazel:ray.bzl", "COPTS")

cc_binary(
    name = "graph",
    srcs = glob([
        "*.cc",
    ]),
    args = [
        "--dynamic-library-path $(location graph.so)",
    ],
    copts = COPTS,
    data = [
        "graph.so",
        "//cpp:ray_cpp_pkg",
    ],
    linkstatic = True,
    deps = [
        "//cpp:ray_api",
        "@com_github_gflags_gflags//:gflags",
    ],
)

cc_binary(
    name = "graph.so",
    srcs = glob([
        "*.cc",
    ]),
    copts = COPTS,
    linkstatic = True,
    deps = [
        "//cpp:ray_api",
        "@com_github_gflags_gflags//:gflags",
    ],
)
